# SimpleApp

./: .gitignore  README.md  main.py  pyproject.toml  requirements
api_v1/database/: engine.py  peoples.db
api_v1/models/: people_model.py
api_v1/routers/: __init__.py  database_router.py  gender_router.py  people_router.py
api_v1/schemas/: people_schema.py
api_v1/service/: people.py
api_v1/services/: gender.py  people.py
api_v1/simple_utills/: error_message.py
