[project]
name = "simpleapp"
version = "0.1.0"
description = ""
authors = [
    {name = "shirohir0",email = "shirohiro93@gmail.com"}
]
license = {text = "None"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standart] (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[tool.poetry]
# package-mode = false
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
